syntax = "proto3";

package user;

option go_package = "github.com/storywarz/user-service/pkg/proto";

service UserService {
  // GetUser retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  
  // CreateUser creates a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  
  // UpdateUser updates an existing user
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  
  // DeleteUser removes a user by ID
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

// User represents a user in the system
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string display_name = 4;
  string avatar_url = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

// GetUser

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

// CreateUser

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string display_name = 3;
  string avatar_url = 4;
}

message CreateUserResponse {
  User user = 1;
}

// UpdateUser

message UpdateUserRequest {
  string id = 1;
  optional string username = 2;
  optional string email = 3;
  optional string display_name = 4;
  optional string avatar_url = 5;
}

message UpdateUserResponse {
  User user = 1;
}

// DeleteUser

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
} 